--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/01 --I am nominated with honor to serve as a <strong>Senior Program Committee (Meta-Reviewers)</strong> of the AAAI 2022.</strong></li>
 <li> 2021/08 --We organize a <strong>special issue</strong> on Advanced Machine Learning Methodologies for Underwater Image and Video Processing and Analysis in IEEE Journal of Oceanic Engineering (IEEE-JOE) (SCI, IF: 3.554)</li>
 <li> 2021/07 --Our Zero-DCE (Zero-DCE++) for low-light image enhancement was used in the 1st place solutions for UG2+ Challenge 2021 -- (Semi-)supervised Face detection in the low light condition <a href="https://arxiv.org/abs/2107.00818" target="_blank"><font color="#ff0000">[1st place solution]</font></a>. Check our Zero-DCE (Zero-DCE++) <a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html" target="_blank"><font color="#ff0000">[Project Page]</font></a>.</li>
 <li> 2021/05 --I am recognized as <strong>Outstanding Reviewer</strong>, IEEE CVPR 2021</li>
@@ -607,6 +608,9 @@ Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)
 
 <br><strong>Session Chair</strong></br>
 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
+
+<br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
+AAAI 2022
 
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
