--- a/index.html
+++ b/index.html
@@ -583,9 +583,10 @@ a, a:visited { color : #0050e7; }
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Co-Supervision and Teaching:</h2>
 <ul>
-
-<li>Co-Supervisor, M.E.: Zurang Liu, Project: Deep Image Harmonization, NTU, 01/2021-present</li>
-<li>Co-Supervisor, M.E.: Qiming Ai, Project: Deep Photo Enhancement, NTU, 01/2020-12/2020</li>
+	
+<li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Video Depth Estimation, NTU, 08/2021-present</li>
+<li>Co-Supervisor, M.E.: Zurang Liu (Beijing University of Posts and Telecommunications), AI Major Project: Deep Image Harmonization, NTU, 01/2021-present</li>
+<li>Co-Supervisor, M.E.: Qiming Ai (University of Science and Technology of China),  AI Major Project: Deep Photo Enhancement, NTU, 01/2020-12/2020</li>
 <li>Co-Supervisor, FYP: Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, NTU, 06/2020-06/2021</li>
 <li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
 </ul>
