--- a/index.html
+++ b/index.html
@@ -588,6 +588,8 @@ a, a:visited { color : #0050e7; }
 <li>Co-Supervisor, M.E.: Zurang Liu (Beijing University of Posts and Telecommunications), AI Major Project: Deep Image Harmonization, NTU, 01/2021-present</li>
 <li>Co-Supervisor, M.E.: Qiming Ai (University of Science and Technology of China),  AI Major Project: Deep Photo Enhancement, NTU, 01/2020-12/2020</li>
 <li>Co-Supervisor, FYP: Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, NTU, 06/2020-06/2021</li>
+<li>Co-Supervisor, M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU</li>
+<li>Co-Supervisor, M.E.: Yuheng Shi (Nanjing University of Posts and Telecommunications),  Project: Hand Guesture Recognition in Adverse Environment, ANU</li>
 <li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
 </ul>
 <br>
