--- a/Proj_Ucolor.html
+++ b/Proj_Ucolor.html
@@ -240,8 +240,8 @@
           <tbody><tr>
             <td width="20%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img src="./TIP21_Ucolor_files/paper_logo.jpg" ,="" width="40%"></a><br><br>
-                <a href="" target="_blank">Paper</a>
+                <a href="https://ieeexplore.ieee.org/document/9426457" target="_blank" class="imageLink"><img src="./TIP21_Ucolor_files/paper_logo.jpg" ,="" width="40%"></a><br><br>
+                <a href="https://ieeexplore.ieee.org/document/9426457" target="_blank">Paper</a>
               </center>
             </td>
             <td width="20%">
