--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
 	  <div class="publication">
-            <img src="./logo/survey.jpg" class="publogo" width="300 px">
+            <img src="./logo/survey.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="">Low-Light Image and Video Enhancement Using Deep Learning: A Survey</a>
