--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/09 --I am recognized as <strong>Outstanding Reviewer</strong>, IEEE ICCV 2021</li>
 <li> 2021/08 --I am nominated with honor to serve as a <strong>Senior Program Committee (Meta-Reviewers)</strong> of the AAAI 2022.</strong></li>
 <li> 2021/08 --We organize a <strong>special issue</strong> on Advanced Machine Learning Methodologies for Underwater Image and Video Processing and Analysis in IEEE Journal of Oceanic Engineering (IEEE-JOE) (SCI, IF: 3.554)</li>
 <li> 2021/07 --Our Zero-DCE (Zero-DCE++) for low-light image enhancement was used in the 1st place solutions for UG2+ Challenge 2021 -- (Semi-)supervised Face detection in the low light condition <a href="https://arxiv.org/abs/2107.00818" target="_blank"><font color="#ff0000">[1st place solution]</font></a>. Check our Zero-DCE (Zero-DCE++) <a href="https://li-chongyi.github.io/Proj_Zero-DCE++.html" target="_blank"><font color="#ff0000">[Project Page]</font></a>.</li>
@@ -563,6 +564,7 @@ a, a:visited { color : #0050e7; }
 
 <ul>
 <li>Four papers have been recognized as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">PDF</a></li>
+<li>ICCV (Outstanding Reviewer in 2021). <a href=""  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
 <li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li> 
 <li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>
