--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ Springer Journal of Signal, Image and Video Processing (IF: 1.794)
 <br><strong>Guest Editor</strong></br>
 IEEE Journal of Oceanic Engineering (Lead Guest Editor) (IF: 2.9)</br>
 Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)</br>
-Multimedia Tools and Applications (IF: 2.313)</br>
+Multimedia Tools and Applications (IF: 2.313)
 
 <br><strong>Session Chair</strong></br>
 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
