--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/09 --My supervised FYP student is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a> Congratulations to Sihao! So proud of you! </li>
 <li> 2021/09 --I am recognized as <strong>Outstanding Reviewer</strong>, IEEE ICCV 2021</li>
 <li> 2021/08 --I am nominated with honor to serve as a <strong>Senior Program Committee (Meta-Reviewers)</strong> of the AAAI 2022.</strong></li>
 <li> 2021/08 --We organize a <strong>special issue</strong> on Advanced Machine Learning Methodologies for Underwater Image and Video Processing and Analysis in IEEE Journal of Oceanic Engineering (IEEE-JOE) (SCI, IF: 3.554)</li>
@@ -589,7 +590,7 @@ a, a:visited { color : #0050e7; }
 <li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Video Depth Estimation, NTU, 08/2021-present</li>
 <li>Co-Supervisor, M.E.: Zurang Liu (Beijing University of Posts and Telecommunications), AI Major Project: Deep Image Harmonization, NTU, 01/2021-present</li>
 <li>Co-Supervisor, M.E.: Qiming Ai (University of Science and Technology of China),  AI Major Project: Deep Photo Enhancement, NTU, 01/2020-12/2020</li>
-<li>Co-Supervisor, FYP: Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, NTU, 06/2020-06/2021</li>
+<li>Co-Supervisor, FYP: Sihao Chen, Project: Learning to See in the Dark <a href="https://drive.google.com/file/d/12Vu-n2Kw3DV3qa6VfOVTpbyy8TGfRIQz/view?usp=sharing">[Final Report--Video (A+)]</a>, NTU, 06/2020-06/2021. Sihao's project is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a></li>
 <li>Co-Supervisor, M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU</li>
 <li>Co-Supervisor, M.E.: Yuheng Shi (Nanjing University of Posts and Telecommunications),  Project: Hand Guesture Recognition in Adverse Environment, ANU</li>
 <li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
