--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ a, a:visited { color : #0050e7; }
 
   
 <p>
-
+<li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> ABN-02b-11</li>
 <small>📧lichongyi25 at gmail.com</small><br>
 <small>📧chongyi.li at ntu.edu.sg</small><br><br>
 <a href="https://github.com/Li-Chongyi/" target="_blank">[GitHub]</a>  
