--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ a, a:visited { color : #0050e7; }
             <img src="./logo/survey.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href=""><small>Low-Light Image and Video Enhancement Using Deep Learning: A Survey</small></a>
+                    <a href="">Low-Light Image and Video Enhancement Using Deep Learning: A Survey</a>
                 </strong>
 		  <br> 
 		<em><b>A Survey, An Online Platform, A New Dataset, 2021</b></em>
