--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
 
 <ul>
+<li> 2021/11 --One paper has been accepted by <strong>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 17.861)</strong></li>
 <li> 2021/10 --One paper has been accepted by <strong>International Conference on 3D Vision 2021</strong> </li>
 <li> 2021/09 --My supervised FYP student is awarded the <strong>2021 Global Undergraduate Awards</strong> for his entry 'Learning to See in the Dark - Low Light Image Enhancement'.  <a href="https://undergraduateawards.com/" target="_blank"><font color="#ff0000">[The Global Undergraduate Awards]</font></a> Congratulations to Sihao! So proud of you! </li>
 <li> 2021/09 --I am recognized as <strong>Outstanding Reviewer</strong>, IEEE ICCV 2021</li>
@@ -184,7 +185,7 @@ a, a:visited { color : #0050e7; }
                     <a href="">Low-Light Image and Video Enhancement Using Deep Learning: A Survey</a>
                 </strong>
 		  <br> 
-		<em><b>A Survey, An Online Platform, A New Dataset, 2021</b></em>
+		<em><b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</b></em>
                 <br> 
                <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
                 <br>
