--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2104.10729">PDF</a>| 
-		    <a href="https://www.mmlab-ntu.com/project/lliv_survey/index.html/">Project Page</a>| 
+		    <a href="https://www.mmlab-ntu.com/project/lliv_survey/index.html/">Project</a>| 
                     <a href="https://github.com/Li-Chongyi/Lighting-the-Darkness-in-the-Deep-Learning-Era-Open/">Collections</a>| 
                     <a href="http://mc.nankai.edu.cn/ll/">Platform</a>| 
 		    <a href="https://drive.google.com/file/d/1QS4FgT5aTQNYy-eHZ_A89rLoZgx_iysR/view?usp=sharing/">Dataset</a>
