--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ a, a:visited { color : #0050e7; }
   
 <ul>
 <li> Different deep models may be implemented in different platforms such as Caffe, Theano, TensorFlow, and PyTorch. As a result, different algorithms demand different configurations, GPU versions, and hardware specifications. Such requirements are prohibitive to many researchers, especially for beginners who are new to this area and may not even have GPU resources.</font></a></li>
-<li> To resolve these problems, we develop an online platform, LLIE-Platform <a href="http://mc.nankai.edu.cn/ll" target="_blank"><font color="#ff0000">[LLIE-Platform]. 
+<li> To resolve these problems, we develop an online platform, LLIE-Platform <a href="http://mc.nankai.edu.cn/ll" target="_blank"><font color="#ff0000">[LLIE-Platform]</font></a>. 
 If you use this platform, please cite our paper "Low-Light Image and Video Enhancement Using Deep Learning: A Survey", TPAMI, 2021.</li>
 </ul>
 <br>
