--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br>
 		<em><b>CVPR, 2020</b></em>
                 <br>
-                Chunle Guo*, <b>Chongyi Li*</b>,  Jichang Guo, Chen Change Loy,  Junhui Hou,  Sam Kwong,  Runmin Cong.
+                Chunle Guo, <b>Chongyi Li</b>,  Jichang Guo, Chen Change Loy,  Junhui Hou,  Sam Kwong,  Runmin Cong.
                 <br>
                 <span class="links">
                     <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Guo_Zero-Reference_Deep_Curve_Estimation_for_Low-Light_Image_Enhancement_CVPR_2020_paper.pdf">PDF</a>| 
