--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		     <br>
 		<em><b>IEEE Transactions on Image Processing (TIP), 2019</b></em>
                 <br>
-                Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
+                Chunle Guo, <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8579111">PDF</a>| 
