--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Low-Light Image and Video Enhancement Using Deep Learning: A Survey</a>
                 </strong>
 		  <br> 
-		<em><b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</b></em>
+		<em><b>TPAMI, 2021</b></em>
                 <br> 
                <b>Chongyi Li</b>, Chunle Guo, Linghao Han, Jun Jiang, Ming-Ming Cheng, Jinwei Gu, Chen Change Loy.
-                
+                <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2104.10729">PDF</a>| 
 		    <a href="https://www.mmlab-ntu.com/project/lliv_survey/index.html">Project Page</a>| 	
