--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
-<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award.</li>
+<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="/PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>
 <li>Four papers have been recognized as ESI Highly Cited Paper. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E9%AB%98%E5%80%8D%E5%BC%95-%E8%8B%B1%E6%96%87version.pdf"  target="_blank">PDF</a></li>
 <li>ICCV (Outstanding Reviewer in 2021). <a href="http://iccv2021.thecvf.com/outstanding-reviewers"  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
