--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ a, a:visited { color : #0050e7; }
 </p> <br>
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
+<p class="view"><a href="datasets.html">Datasets</a></p>
 <!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
 </header>
 
