--- a/proj_optical_saliency.html
+++ b/proj_optical_saliency.html
@@ -18,7 +18,7 @@
 
   
 <p>
-<small>lichongyi25@gmail.com lichongyi@tju.edu.cn</small><br><br>
+<small>lichongyi25 @ gmail.com </small><br><br>
 <a href="https://github.com/Li-Chongyi" target="_blank">[GitHub]</a>  
 <a href="http://dblp.uni-trier.de/pers/hd/l/Li:Chongyi" target="_blank">[DBLP]</a>  <br>
 <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ&hl=zh-CN" target="_blank">[Google Scholar]</a> <br>
