--- a/sub_publication.html
+++ b/sub_publication.html
@@ -26,7 +26,7 @@
 </p> <br>
 <p class="view"><a href="https://li-chongyi.github.io/">Homepage</a></p>
 <p class="view"><a href="sub_publication.html">Publications</a></p>
-<!--<p class="view"><a href="sub_projects.html">Projects</a></p>-->
+<p class="view"><a href="datasets.html">Datasets</a></p>
 </header>
 
 <section>
