--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ a, a:visited { color : #0050e7; }
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2021/12 --One paper has been accepted by <strong>IEEE Transactions on Geoscience and Remote Sensing  (IF: 5.6)</strong></li>
 <li> 2021/11 --One paper has been accepted by <strong>IEEE Transactions on Pattern Analysis and Machine Intelligence (IF: 17.861)</strong></li>
 <li> 2021/11 --I received the runners-up award of  <strong>Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China, 2021</strong>. </li>
 <li> 2021/10 --One paper has been accepted by <strong>International Conference on 3D Vision 2021</strong> </li>
