--- a/sub_publication.html
+++ b/sub_publication.html
@@ -60,6 +60,14 @@
 <ol>
 <li> <strong>Chongyi Li</strong>, Huazhu Fu, Miao Yang, Runmin Cong, and Chunle Guo, Deep Retinal Image Non-Uniform Illumination Removal (Book Chapter)<a href="https://www.worldscientific.com/doi/abs/10.1142/9789811218842_0010" target="_blank"><font color="#1C86EE">[Chapter]</font></a>, Generalization with Deep Learning: for improvement on Sensing Capability, Zhenghua Chen, Min Wu, and Xiaoli Li (Book), <strong><ud2>World Scientific</ud2></strong>, ISBN: 978-981-121-883-5, April 2021. <a href="https://www.worldscientific.com/worldscibooks/10.1142/11784" target="_blank"><font color="#1C86EE">[Book]</font></a></li>   
 </ol> 
+
+ <h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022:</h4>
+
+<ol>
+<li> Xiangyuan Gu, Jichang Guo,  Tao Ming, Lijun Xiao, and <strong>Chongyi Li</strong>, A Feature Selection Algorithm Based on Equal Interval Division and Conditional Mutual Information, <strong><ud2>Neural Processing Letters</ud2></strong> (SCI, IF=2.908), 2019.  <a href="DF/A Feature Selection Algorithm Based on Equal Interval Division and Conditional Mutual Information.pdf" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> </li>
+
+</ol> 
   
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021:</h4>
