--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/01 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of Neurocomputing (IF: 5.719).</strong></li>
 <li> 2022/01 --Two papers are recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=83" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  <strong>IEEE Transactions on Image Processing</strong></li>
 <li> 2022/01 --I am homored to be recognised as the <strong>World’s Top 2% Scientists (2020)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database</font></a></li>.
 <!--
@@ -639,6 +640,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 
 <ul>
 <br><strong>Associate Editor</strong></br>
+2022/01- : Neurocomputing (IF: 5.719)
 2021/01- : Springer Journal of Signal, Image and Video Processing (IF: 1.794) 
 
 <br><strong>Guest Editor</strong></br>
