--- a/index.html
+++ b/index.html
@@ -640,8 +640,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 
 <ul>
 <br><strong>Associate Editor</strong></br>
-<br>2022/01- : Neurocomputing (IF: 5.719)</br>
-<br>2021/01- : Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
+2022/01- : Neurocomputing (IF: 5.719)</br>
+2021/01- : Springer Journal of Signal, Image and Video Processing (IF: 1.794)</br> 
 
 <br><strong>Guest Editor</strong></br>
 IEEE Journal of Oceanic Engineering (Lead Guest Editor) (IF: 2.9)</br>
