--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Co-Supervision and Teaching:</h2>
 <ul>
-	
+<li>Co-Supervisor, M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Image and Video Enhancement, NTU, 01/2022-present</li>	
 <li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Video Depth Estimation, NTU, 08/2021-present</li>
 <li>Co-Supervisor, M.E.: Zurang Liu (Beijing University of Posts and Telecommunications), AI Major Project: Deep Image Harmonization, NTU, 01/2021-present</li>
 <li>Co-Supervisor, M.E.: Qiming Ai (University of Science and Technology of China),  AI Major Project: Deep Photo Enhancement, NTU, 01/2020-12/2020</li>
@@ -656,7 +656,7 @@ Asia-Pacific Signal and Information Processing Association Annual Summit and Con
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
 AAAI 2022
-
+<!--
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
 
@@ -671,6 +671,8 @@ AAAI 2022
 <li><strong>SPIE</strong>:</li> JEI
 
 <li><strong>Conference</strong>:</li>ICPR 2018; ACM MM 2019;ICME 2020; ACM MM2020; MICCAI 2020; AAAI 2021; CVPR 2021; IJCAI 2021;ICME 2021; MICCAI 2021; ACM MM2021; ICCV2021; NeurIPS2021; ICLR2022; CVPR2022
+-->
+
 </ul>
 <br>
 <hr />    
