--- a/sub_publication.html
+++ b/sub_publication.html
@@ -14,7 +14,7 @@
 <header>
 <h7>Chongyi Li</h7><br><br>
 <div>
-<img src="sub_img/lichongyi_photo.jpg" border="0" width="80%"><br></div><br>
+<img src="sub_img/lichongyi_photo_3.png" border="0" width="80%"><br></div><br>
 
   
 <p>
