--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/02 --I am homored to be recognised as the <strong>Outstanding Reviewer</strong> of the IEEE Journal of Oceanic Engineering.</li>
 <li> 2022/01 --One paper has been recognized as <strong>ESI Hot Paper</strong></li>
 <li> 2022/01 --One paper has been recognized as <strong>ESI Highly Cited Paper</strong></li>
 <li> 2022/01 --One papers is recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=6221036" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  <strong>IEEE Transactions on Cybernetics</strong></li>
@@ -601,6 +602,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
+<li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021)</li>
 <li>One paper has been recognized as <a href="https://clarivate.libguides.com/c.php?g=593878&p=4107960#:~:text=Hot%20Papers%20are%20papers%20published,database%20in%20the%20same%20period."  target="_blank">ESI Hot Paper</a>.</li>
 <li>I am homored to be recognised as the <strong>World’s Top 2% Scientists (2020)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <li>Two papers are recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=83" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  IEEE Transactions on Image Processing.</li>
@@ -612,7 +614,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li>
 <li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018.<a href="http://www.bsig.org.cn/detail/2316">Media</a></li> 
-<li>"Outstanding Graduate Student" in Tianjin University, 2018.</li>
+<li>"Outstanding Graduate Student" in Tianjin University, 2018.
 <!--<li>Bohai Securities Fellowship, 2017.</li>
 <li>"Merit Student" in Tianjin University, 2017.</li> 
 <li>"Advanced Individual" in the creative working, 2017.</li>
