--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
         <br>
 
 	  <div class="publication">
-            <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" height="160" width="280">
+            <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</a>
