--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>2022</b></em>
                 <br> 
-               Shangchen Zhou, <b>Chongyi Li</b>, and Chen Change Loy.
+               Shangchen Zhou, <b>Chongyi Li</b>, Chen Change Loy.
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2202.03373.pdf">PDF</a>| 
