--- a/sub_publication.html
+++ b/sub_publication.html
@@ -54,6 +54,16 @@
 
 </ol>   
   --> 
+ 
+   <h4>
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preprint:</h4>
+
+<ol>
+<li> Shangchen Zhou, <strong>Chongyi Li</strong>, and Chen Change Loy, <strong>LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</strong>. <a href="https://arxiv.org/pdf/2202.03373.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="https://shangchenzhou.com/projects/LEDNet/" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
+<li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., Image Colorization: A Survey and Dataset. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a><a href="https://github.com/saeed-anwar/ColorSurvey" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
+<li> <strong>Chongyi Li</strong>, Chunle Guo, Qiming Ai, Shangchen Zhou, Chen Change Loy, Flexible Piecewise Curves Estimation for Photo Enhancement. <a href="https://arxiv.org/pdf/2010.13412.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> </li>
+</ol> 
+  
 <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Book&Book Chapter:</h4>
 
@@ -61,6 +71,7 @@
 <li> <strong>Chongyi Li</strong>, Huazhu Fu, Miao Yang, Runmin Cong, and Chunle Guo, Deep Retinal Image Non-Uniform Illumination Removal (Book Chapter)<a href="https://www.worldscientific.com/doi/abs/10.1142/9789811218842_0010" target="_blank"><font color="#1C86EE">[Chapter]</font></a>, Generalization with Deep Learning: for improvement on Sensing Capability, Zhenghua Chen, Min Wu, and Xiaoli Li (Book), <strong><ud2>World Scientific</ud2></strong>, ISBN: 978-981-121-883-5, April 2021. <a href="https://www.worldscientific.com/worldscibooks/10.1142/11784" target="_blank"><font color="#1C86EE">[Book]</font></a></li>   
 </ol> 
 
+ 
  <h4>
 <a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022:</h4>
 
@@ -104,8 +115,6 @@
 <li> Bo Wang, Bowen Wei, Zitong Kang, Li Hu, and <strong>Chongyi Li</strong>, Fast Color Balance and Multi-Path Fusion for Sandstorm Image Enhancement, <strong><ud2>Signal, Image and Video Processing</ud2></strong> (SCI, IF=1.794), 2020. <a href="https://link.springer.com/article/10.1007/s11760-020-01786-1" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>
 <li> Bo Wang, Li Hu, Bowen Wei, Zitong Kang, and <strong>Chongyi Li</strong>, Nighttime Image Dehazing Using Color Cast Removal and Dual Path Multi-Scale Fusion Strategy, <strong><ud2>Frontiers of Computer Science</ud2></strong> (SCI, IF=1.940), 2020. <a href="https://link.springer.com/article/10.1007/s11704-021-0162-x" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li> 
 <li> Hua Li, Runming Cong, Sam Kwong, Chuanbo Chen, Qianqian Xu, and <strong>Chongyi Li</strong>,  Stereo Superpixel: An Iterative Framework Based on Parallax Consistency and Collaborative Optimization, <strong><ud2>Information Science</ud2></strong> (SCI, IF=5.524), 2020. <a href="https://www.sciencedirect.com/science/article/abs/pii/S002002552031197X" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a></li>  
-<li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., Image Colorization: A Survey and Dataset. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> </li>
-<li> <strong>Chongyi Li</strong>, Chunle Guo, Qiming Ai, Shangchen Zhou, Chen Change Loy, Flexible Piecewise Curves Estimation for Photo Enhancement. <a href="https://arxiv.org/pdf/2010.13412.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> </li>
 </ol>    
   
 <h4>
