--- a/sub_publication.html
+++ b/sub_publication.html
@@ -60,8 +60,8 @@
 
 <ol>
 <li> Shangchen Zhou, <strong>Chongyi Li</strong>, and Chen Change Loy, <strong>LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</strong>. <a href="https://arxiv.org/pdf/2202.03373.pdf" target="_blank"><font color="#1C86EE">[PDF-arXiv version]</font></a> <a href="https://shangchenzhou.com/projects/LEDNet/" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
-<li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., Image Colorization: A Survey and Dataset. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a><a href="https://github.com/saeed-anwar/ColorSurvey" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
-<li> <strong>Chongyi Li</strong>, Chunle Guo, Qiming Ai, Shangchen Zhou, Chen Change Loy, Flexible Piecewise Curves Estimation for Photo Enhancement. <a href="https://arxiv.org/pdf/2010.13412.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> </li>
+<li> Saeed Anwar, Muhammad Tahir, <strong>Chongyi Li</strong>, et al., <strong>Image Colorization: A Survey and Dataset</strong>. <a href="https://arxiv.org/pdf/2008.10774.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a><a href="https://github.com/saeed-anwar/ColorSurvey" target="_blank"><font color="#1C86EE">[Project]</font></a></li> 
+<li> <strong>Chongyi Li</strong>, Chunle Guo, Qiming Ai, Shangchen Zhou, Chen Change Loy,  <strong>Flexible Piecewise Curves Estimation for Photo Enhancement</strong>. <a href="https://arxiv.org/pdf/2010.13412.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv Version]</font></a> </li>
 </ol> 
   
 <h4>
