--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	  <div class="publication">
-            <img src="logo/UDC_syn_LQ5.png" onmouseover="this.src='logo/UDC_syn_GT5.png';" onmouseout="this.src='logo/UDC_syn_LQ5.pngg';" class="publogo"  width="300 px">
+            <img src="logo/UDC_syn_LQ5.jpg" onmouseover="this.src='logo/UDC_syn_GT5.jpg';" onmouseout="this.src='logo/UDC_syn_LQ5.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Removing Diffraction Image Artifacts in Under-Display Camera via Dynamic Skip Connection Network</a>
