--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <head>
- <link rel="Shortcut Icon" href="./favicon.jpg" sizes=16x16  type="image/x-icon" />
- <link rel="Bookmark" href="./favicon.jpg" sizes=16x16 type="image/x-icon" />
+ <link rel="Shortcut Icon" href="./logo/hp_logo.jpg" sizes=16x16  type="image/x-icon" />
+ <link rel="Bookmark" href="./logo/hp_logo.jpg" sizes=16x16 type="image/x-icon" />
 <!--<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">-->
   <title>Homepage of Chongyi Li</title>
