--- a/sub_publication.html
+++ b/sub_publication.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+<!-- Meta tags for search engines to crawl -->
+<meta name="robots" content="index,follow">
+<head>
+ <link rel="Shortcut Icon" href="./logo/hp_logo.jpg" sizes=16x16  type="image/x-icon" />
+ <link rel="Bookmark" href="./logo/hp_logo.jpg" sizes=16x16 type="image/x-icon" />
+  
 <title>Publications</title>
 
 <link rel="stylesheet" href="stylesheets/styles.css">
