--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <link rel="Bookmark" href="./logo/hp_logo.jpg" sizes=16x16 type="image/x-icon" />
 <!--<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">-->
-  <title>Homepage of Chongyi Li</title>
+  <title>Chongyi Li</title>
 	<style>
 @media screen and (max-device-width: 480px){
   body{
