--- a/index.html
+++ b/index.html
@@ -216,6 +216,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
         <br>
 
 	  <div class="publication">
+            <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Image Dehazing Transformer with Transmission-Aware 3D Position Embedding</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2022</b></em>
+                <br> 
+              Chunle Guo, Qixin Yan, <b>Chongyi Li<sup>+</sup></b>, Saeed Anwar, Runmin Cong, and Wenqi Ren.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	  <div class="publication">
             <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
