--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>CVPR, 2022</b></em>
                 <br> 
-              Chunle Guo, Qixin Yan, <b>Chongyi Li<sup>+</sup></b>, Saeed Anwar, Runmin Cong, and Wenqi Ren.
+              Chunle Guo, Qixin Yan, Saeed Anwar, Runmin Cong, Wenqi Ren, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
