--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/03 --Our ECCV 2022 Workshop coupled with challenges: <strong>Mobile Intelligent Photography & Imaing</strong> has been accepted. Stay Tuned!</li>
 <li> 2022/03 --One paper has been accepted by <strong>CVPR 2022</strong></li>
 <li> 2022/02 --I am homored to be recognised as the <strong>Outstanding Reviewer</strong> of the IEEE Journal of Oceanic Engineering.</li>
 <li> 2022/01 --One paper has been recognized as <strong>ESI Hot Paper</strong></li>
