--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>ECCV Workshop, 2022</b></em>
                 <br> 
-              Chunle Guo, Qixin Yan, Saeed Anwar, Runmin Cong, Wenqi Ren, and <b>Chongyi Li<sup>+</sup></b>.
+              Chongyi Li, Shangchen Zhou, Ruicheng Feng, Jun Jiang, Wenxiu Sun, Qingyu Yang, Qingpeng Zhu, Chen Change Loy, and Jinwei Gu.
                 <br>
                 <span class="links">
 		      <a href="http://mipi-challenge.org/">Website</a>
