--- a/index.html
+++ b/index.html
@@ -221,16 +221,15 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
            <img src="./logo/MIPI.png" class="publogo" width="300 px">
             <p> 
                 <strong>
-                    <a href="">Mobile Intelligent Photography & Imaging (MIPI)</a>
+                    <a href="">Mobile Intelligent Photography & Imaging</a>
                 </strong>
 		  <br> 
-		<em><b>ECCV Workshop, 2022</b></em>
+		<em><b>1st MIPI workshop @ ECCV 2022</b></em>
                 <br> 
-              Chongyi Li, Shangchen Zhou, Ruicheng Feng, Jun Jiang, Wenxiu Sun, Qingyu Yang, Qingpeng Zhu, Chen Change Loy, and Jinwei Gu.
+              <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, Jun Jiang, Wenxiu Sun, Qingyu Yang, Qingpeng Zhu, Chen Change Loy, and Jinwei Gu.
                 <br>
                 <span class="links">
-		      <a href="http://mipi-challenge.org/">Website</a>
-		      <a href="">We organize the 1st MIPI workshop coupled with challenges @ECCV 2022. </a>| 	
+		      <a href="http://mipi-challenge.org/">Website	
 		      
                 </span>
             </p>
