--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
-<li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021)<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9756533">Link</a>|</li>
+<li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021)<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9756533">News</a></li>
 <li>One paper has been recognized as <a href="https://clarivate.libguides.com/c.php?g=593878&p=4107960#:~:text=Hot%20Papers%20are%20papers%20published,database%20in%20the%20same%20period."  target="_blank">ESI Hot Paper</a>.</li>
 <li>I am homored to be recognised as the <strong>World’s Top 2% Scientists (2020)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
 <li>Two papers are recognized as  <strong>Popular Documents</strong> <a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=83" target="_blank"><font color="#ff0000">(the 50 most frequently accessed documents)</font></a> in  IEEE Transactions on Image Processing.</li>
